tooling/nargo_cli/tests/snapshots/execution_success/higher_order_functions/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[higher_order_functions] Circuit output: 0x06
